--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,1 +1,10 @@
-<p>contacts works!</p>
+<div class="row">
+    <div class="col-md-5">
+      <!-- <h2>Contact-list goes here</h2> -->
+      <cms-contact-list></cms-contact-list>
+    </div>
+    <div class="col-md-4">
+      <!-- <h2>Contact-detail goes here</h2> -->
+      <cms-contact-detail></cms-contact-detail>
+    </div>
+  </div>
