--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,13 +1,14 @@
 <div class="row">
-    <div class="col-xs-12">
-      <div class="list-group-item clearfix">
-        <h2 class="pull-left">Contacts</h2>
-        <button class="btn btn-success pull-right">New Contact</button>
-      </div>
+  <div class="col-xs-9">
+    <div class="list-group-item clearfix" style="background-color: #f7f6f6;">
+      <h2 class="pull-left">Contacts</h2>
+      <button class="btn btn-success pull-right">New Contact</button>
     </div>
+    
   </div>
+
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-9">
       <a
         href="#"
         class="list-group-item clearfix"
@@ -31,3 +32,4 @@
       <cms-contact-detail></cms-contact-detail> -->
     </div>
   </div>
+</div>
