--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,34 +1,40 @@
+<div class="row">
+  <div class="col-xs-12">
+    <!-- <img
+      [src]="contact.imageUrl"
+      alt="{{ contact.name }}"
+      class="img-responsive"
+    />
+  </div> -->
+  </div>
   <div class="row">
-    <div class="col-xs-9">
-     
-      <a
-        href="#"
-        class="list-group-item clearfix" style="background-color: #f7f6f6;"
-        *ngFor="let contact of contacts"
-        ><h4 class="list-group-item-heading" >{{ contact.name }}</h4>
+    <div class="col-xs-12">
+      <a href="#" class="list-group-item clearfix">
+        <!-- *ngFor="let contact of contact"
+        > -->
+        <h4 class="list-group-item-heading">{{ contact.name }}</h4>
         <div class="pull-left">
           <img
             [src]="contact.imageUrl"
             alt="{{ contact.name }}"
             class="img-responsive"
-            style="max-height: 100px"
+            style="max-height: 50px"
           />
         </div>
-        <span class="pull-right btn-toolbar" style="margin-top: 35px;">
+        <span class="pull-right">
           <button class="btn btn-primary">Edit</button>
           <button class="btn btn-danger">Delete</button>
         </span>
-        
+
         <div class="col-xs-12">
-            <div class="row">
           <p class="list-group-item-text">
             <strong>Email: </strong>{{ contact.email }}
           </p>
           <p class="list-group-item-text">
             <strong>Phone: </strong> {{ contact.phone }}
           </p>
-            </div>
         </div>
       </a>
     </div>
   </div>
+</div>
