--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,35 +1,40 @@
 <div class="row">
-  <div class="col-xs-9">
-    <div class="list-group-item clearfix" style="background-color: #f7f6f6;">
+  <div class="col-xs-12">
+    <div class="list-group-item clearfix">
       <h2 class="pull-left">Contacts</h2>
       <button class="btn btn-success pull-right">New Contact</button>
     </div>
-    
-  </div>
-
-  <div class="row">
-    <div class="col-xs-9">
-      <a
-        href="#"
-        class="list-group-item clearfix"
-        *ngFor="let contact of contacts"
-      >
-        <a href="#" class="list-group-item clearfix">
-          <div class="pull-left">
-            <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-            <!-- <p class="list-group-item-text">{{ contact.email }}</p> -->
-          </div>
-          <span class="pull-right">
-            <img
-              [src]="contact.imageUrl"
-              alt="{{ contact.name }}"
-              class="img-responsive"
-              style="max-height: 100px"
-            /> </span
-        ></a>
-      </a>
-      <!-- <cms-contact-list></cms-contact-list>
-      <cms-contact-detail></cms-contact-detail> -->
-    </div>
   </div>
 </div>
+<hr />
+<div class="row">
+  <div class="col-xs-12">
+    <cms-contact-item
+      *ngFor="let contactEl of contacts"
+      [contact]="contactEl"
+      (contactSelected)="onSelected(contactEl)"
+    ></cms-contact-item>
+
+    <!-- <cms-contact-list></cms-contact-list>
+    <cms-contact-detail></cms-contact-detail> -->
+  </div>
+</div>
+
+<!-- <a
+      href="#"
+      class="list-group-item clearfix"
+      *ngFor="let contact of contacts"
+    >
+      <a href="#" class="list-group-item clearfix">
+        <div class="pull-left">
+          <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+        </div>
+        <span class="pull-right">
+          <img
+            [src]="contact.imageUrl"
+            alt="{{ contact.name }}"
+            class="img-responsive"
+            style="max-height: 100px"
+          /> </span
+      ></a>
+    </a> -->
