--- a/cms/src/app/contacts/contact-list/contact-list.component.css
+++ b/cms/src/app/contacts/contact-list/contact-list.component.css
@@ -1,3 +1,11 @@
 .row {
     padding: 20px;
 }
+.title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    }
+    .pad-left-right {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    }
