--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,11 +1,39 @@
 <div class="row">
   <div class="col-xs-12">
+    <div class="panel panel-default">
+      <!-- <div class="list-group-item clearfix"> -->
+      <div class="panel-heading">
+        <div class="row pad-left-right">
+          <!-- <h2 class="title pull-left">Contacts</h2> -->
+          <h2 class="title pull-left">Contacts</h2>
+          <button class="btn btn-success pull-right">New Contact</button>
+        </div>
+      </div>
+      <!-- </div> -->
+
+      <div class="panel-body">
+        <div class="row">
+          <!-- <div class="col-xs-12"> -->
+          <cms-contact-item
+            *ngFor="let contactEl of contacts"
+            [contact]="contactEl"
+            (contactSelected)="onSelected(contactEl)"
+          ></cms-contact-item>
+          <!-- </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="row">
+  <div class="col-xs-12">
     <div class="list-group-item clearfix">
       <h2 class="pull-left">Contacts</h2>
       <button class="btn btn-success pull-right">New Contact</button>
     </div>
   </div>
-</div>
+</>
 <hr />
 <div class="row">
   <div class="col-xs-12">
@@ -14,11 +42,11 @@
       [contact]="contactEl"
       (contactSelected)="onSelected(contactEl)"
     ></cms-contact-item>
-
-    <!-- <cms-contact-list></cms-contact-list>
+-->
+<!-- <cms-contact-list></cms-contact-list>
     <cms-contact-detail></cms-contact-detail> -->
-  </div>
-</div>
+<!-- </div>
+</div> -->
 
 <!-- <a
       href="#"
