--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,31 +1,32 @@
 <div class="row">
   <div class="col-xs-12">
-    <!-- <img
-      [src]="contact.imageUrl"
-      alt="{{ contact.name }}"
-      class="img-responsive"
-    />
-  </div> -->
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <a href="#" class="list-group-item clearfix">
-        <!-- *ngFor="let contact of contact"
-        > -->
-        <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-        <div class="pull-left">
-          <img
-            [src]="contact.imageUrl"
-            alt="{{ contact.name }}"
-            class="img-responsive"
-            style="max-height: 50px"
-          />
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row list-group main-container">
+          <!-- <div class="col-xs-12 list-group-item top"> -->
+          <!-- <a href="#" class="list-group-item clearfix"> -->
+          <a href="#">
+            <!-- *ngFor="let contact of contact"
+              > -->
+            <h2 class="list-group-item-heading">{{ contact.name }}</h2>
+            <div class="pull-left">
+              <img
+                [src]="contact.imageUrl"
+                alt="{{ contact.name }}"
+                class="img-responsive"
+                style="max-height: 150px"
+              />
+            </div>
+            <span class="pull-right">
+              <button class="btn btn-primary">Edit</button>
+              <button class="btn btn-danger">Delete</button>
+            </span>
+          </a>
+          <!-- </div> -->
         </div>
-        <span class="pull-right">
-          <button class="btn btn-primary">Edit</button>
-          <button class="btn btn-danger">Delete</button>
-        </span>
+      </div>
 
+      <div class="panel-body">
         <div class="col-xs-12">
           <p class="list-group-item-text">
             <strong>Email: </strong>{{ contact.email }}
@@ -34,7 +35,7 @@
             <strong>Phone: </strong> {{ contact.phone }}
           </p>
         </div>
-      </a>
+      </div>
     </div>
   </div>
 </div>
