--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="col-md-5">
     <!-- <h2>Contact-list goes here</h2> -->
-    <cms-contact-list
-      (selectedContactEvent)="selectedContact = $event"
-    ></cms-contact-list>
+    <cms-contact-list></cms-contact-list>
   </div>
   <div class="col-md-4">
     <!-- <h2>Contact-detail goes here</h2> -->
