--- a/cms/src/app/documents/document-item/document-item.component.html
+++ b/cms/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,8 @@
-<a class="list-group-item clearfix documentDiv">
-    <!-- Display document name here -->
-    <h2>{{ document.name }}</h2>
-  </a>
+<a
+  href="#"
+  class="list-group-item clearfix documentDiv"
+  (click)="onSelectedDocument()"
+>
+  <!-- Display document name here -->
+  {{ document.name }}
+</a>
