--- a/cms/src/app/documents/documents.component.html
+++ b/cms/src/app/documents/documents.component.html
@@ -1,19 +1,17 @@
 <div class="row">
-    <div class="col-md-5">
-      <!--Add tag to load the DocumentListComponent here-->
-      <cms-document-list
-        (selectedDocumentEvent)="selectedDocument = $event"
-      ></cms-document-list>
-    </div>
-  
-    <div class="col-md-4">
-      <!--Add tag to load the DocumentDetailComponent here-->
-      <cms-document-detail
-        *ngIf="selectedDocument; else infoText"
-        [document]="selectedDocument"
-      ></cms-document-detail>
-      <ng-template #infoText>
-        <p>Please select a Document!</p>
-      </ng-template>
-    </div>
+  <div class="col-md-5">
+    <!--Add tag to load the DocumentListComponent here-->
+    <cms-document-list></cms-document-list>
   </div>
+
+  <div class="col-md-4">
+    <!--Add tag to load the DocumentDetailComponent here-->
+    <cms-document-detail
+      *ngIf="selectedDocument; else infoText"
+      [document]="selectedDocument"
+    ></cms-document-detail>
+    <ng-template #infoText>
+      <p>Please select a Document!</p>
+    </ng-template>
+  </div>
+</div>
