--- a/cms/src/app/app.component.html
+++ b/cms/src/app/app.component.html
@@ -1,8 +1,12 @@
-<cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+<!-- <cms-header (selectedFeatureEvent)="switchView($event)"></cms-header> -->
+<cms-header></cms-header>
+
 <div class="container pull-left">
-  <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
+  <router-outlet></router-outlet>
+  <!-- //--------Deleted after adding Routes -------- -->
+  <!-- <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
   <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
-  <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
+  <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts> -->
 </div>
 <!-- <cms-contacts></cms-contacts> -->
 <div class="container">
