--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -2,12 +2,17 @@
   <div class="panel-heading">
     <div class="row pad-left-right">
       <span class="pull-left title">Documents</span>
-      <a class="btn btn-success pull-right">Add Document</a>
+      <!-- add [routerLink] directive ? -->
+      <a routerLink="/documents/new" class="btn btn-success pull-right"
+        >Add Document</a
+      >
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
       <!--Add tag to display a list of DocumentItem components-->
+      <!-- <router-outlet></router-outlet> -->
+
       <cms-document-item
         *ngFor="let documentEl of documents"
         [document]="documentEl"
