--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,23 +1,66 @@
-<div class="row contact-list-header">
-  <div class="panel panel-default">
-    <div class="col-xs-12 panel-heading">
-      <div class="col-xs-9">
-        <span class="title">Contacts</span>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="panel panel-default">
+      <!-- <div class="list-group-item clearfix"> -->
+      <div class="panel-heading">
+        <div class="row pad-left-right">
+          <!-- <h2 class="title pull-left">Contacts</h2> -->
+          <h2 class="title pull-left">Contacts</h2>
+          <a routerLink="/contacts/new" class="btn btn-success pull-right"
+            >New Contact</a
+          >
+        </div>
       </div>
-      <div class="col-xs-3">
-        <button class="btn btn-success btn-sm">New Contact</button>
-      </div>
-    </div>
+      <!-- </div> -->
       <div class="panel-body">
-        <div class="row contact-list-container">
-          <div class="col-xs-12" margin-top>
-            <cms-contact-item
-              *ngFor="let contact of contacts"
-              [contact]="contact"
-              (click)="onSelected(contact)">
-            </cms-contact-item>
-          </div>  
+        <div class="row">
+          <!-- <div class="col-xs-12"> -->
+          <cms-contact-item
+            *ngFor="let contactEl of contacts"
+            [contact]="contactEl"
+          ></cms-contact-item>
+          <!-- </div> -->
+        </div>
       </div>
     </div>
   </div>
 </div>
+<!-- <div class="row">
+  <div class="col-xs-12">
+    <div class="list-group-item clearfix">
+      <h2 class="pull-left">Contacts</h2>
+      <button class="btn btn-success pull-right">New Contact</button>
+    </div>
+  </div>
+</>
+<hr />
+<div class="row">
+  <div class="col-xs-12">
+    <cms-contact-item
+      *ngFor="let contactEl of contacts"
+      [contact]="contactEl"
+      (contactSelected)="onSelected(contactEl)" //this click event got deleted after adding services
+    ></cms-contact-item>
+-->
+<!-- <cms-contact-list></cms-contact-list>
+    <cms-contact-detail></cms-contact-detail> -->
+<!-- </div>
+</div> -->
+<!-- <a
+      href="#"
+      class="list-group-item clearfix"
+      *ngFor="let contact of contacts"
+    >
+      <a href="#" class="list-group-item clearfix">
+        <div class="pull-left">
+          <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+        </div>
+        <span class="pull-right">
+          <img
+            [src]="contact.imageUrl"
+            alt="{{ contact.name }}"
+            class="img-responsive"
+            style="max-height: 100px"
+          /> </span
+      ></a>
+    </a> -->
